--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,7 @@
 Source: defusedxml
-Maintainer: Debian Python Modules Packaging Team <python-modules-team@lists.alioth.debian.org>
-Uploaders: Luke Faraone <lfaraone@debian.org>, Jelmer Vernooĳ <jelmer@debian.org>
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: Debian Python Modules Packaging Team <python-modules-team@lists.alioth.debian.org>
+XSBC-Pexip-Original-Uploaders: Luke Faraone <lfaraone@debian.org>, Jelmer Vernooĳ <jelmer@debian.org>
 Section: python
 Priority: optional
 Build-Depends: dh-python,
@@ -12,6 +13,7 @@ Homepage: https://pypi.python.org/pypi/defusedxml
 Testsuite: autopkgtest-pkg-python
 Vcs-Git: https://salsa.debian.org/python-team/modules/defusedxml.git
 Vcs-Browser: https://salsa.debian.org/python-team/modules/defusedxml
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ bullseye
 
 Package: python3-defusedxml
 Architecture: all
