--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Homepage: https://pypi.python.org/pypi/defusedxml
 Testsuite: autopkgtest-pkg-python
 Vcs-Git: https://salsa.debian.org/python-team/modules/defusedxml.git
 Vcs-Browser: https://salsa.debian.org/python-team/modules/defusedxml
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ bullseye
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
 
 Package: python3-defusedxml
 Architecture: all
